--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^19.1.0",
     "bootstrap-tagsinput": "^0.7.1",
     "code-begginer-hub": "file:",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
